--- a/style.css
+++ b/style.css
@@ -11,39 +11,62 @@
     background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
     width: 70vw;
     height: 80vh;
-    border-radius: 30px;
+    border-radius: 0 30px 30px 30px;
    
     backdrop-filter: blur(2rem);
     z-index: 1;
     border: 1px solid rgba(250, 255, 255, 0.1);   
-
+    
     display: flex;
    
 }
-.circle1, .circle2{
+
+.menu::before{
+    content: "";
+    width: 50px;
+    height: 100px;
     background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
-    height: 200px;
-    width: 200px;
+
+    display: block;
+    position: relative;
+    top: -0px;
+    left: -50px;
+    border-radius: 0 0 0 30px;
+   
+    z-index: -1;
+}
+.menu::after{
+    content: "";
+    width: 120px;
+    height: 50px;
+    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
+
+    display: block;
+    position: relative;
+    top: -150px;
+    left: -50px;
+   border-radius: 0 30px 0 0;
+   z-index: -1;
+}
+
+
+.circle2{
+    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
+    height: 20vh;
+    width: 20vw;
     position: absolute;
     border-radius: 50%;
     border: 1px solid rgba(250, 255, 255, 0.1);   
+    top: -10%;
+    left: -10%;
 }
 
 .menu{
     background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
     width: 30%;
-    border-radius: 30px;
+    border-radius: 0 30px 30px 30px;
 }
 
 .page{
   
-}
-
-.circle1{
-    right: 100px;
-    top: 150px;
-} 
-.circle2{ 
-    top:2px;
-    left: 130px;
 }
