--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
    
 }
 
-.menu::before{
-    content: "";
+.menu::before{ 
+    content: "d";
     width: 50px;
     height: 100px;
     background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
