--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 }
 
 .menu::before{ 
-    content: "d";
+    content: "";
     width: 50px;
     height: 100px;
     background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
