--- a/style.css
+++ b/style.css
@@ -1,72 +1,390 @@
-.main-container{
-    background-image: url("52f61nfzmwl51.jpg");/*linear-gradient(to right top, #41B883, #7297bd);*/
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.main-container {
+  background-image: url("./images/52f61nfzmwl51.jpg"); /*linear-gradient(to right top, #41B883, #7297bd);*/
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.main-section{
-    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
-    width: 70vw;
-    height: 80vh;
-    border-radius: 0 30px 30px 30px;
-   
-    backdrop-filter: blur(2rem);
-    z-index: 1;
-    border: 1px solid rgba(250, 255, 255, 0.1);   
-    
-    display: flex;
-   
+.main-section {
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.3)
+  );
+  width: 70vw;
+  height: 80vh;
+  border-radius: 0 30px 30px 30px;
+
+  backdrop-filter: blur(2rem);
+  z-index: 1;
+  border: 1px solid rgba(250, 255, 255, 0.1);
+
+  display: flex;
 }
 
-.menu::before{ 
-    content: "";
-    width: 50px;
-    height: 100px;
-    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
+.menu::before {
+  content: "";
+  width: 50px;
+  height: 100px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.3)
+  );
 
-    display: block;
-    position: relative;
-    top: -0px;
-    left: -50px;
-    border-radius: 0 0 0 30px;
-   
-    z-index: -1;
+  display: block;
+  position: absolute;
+  top: -0px;
+  left: -50px;
+  border-radius: 0 0 0 30px;
+
+  z-index: -1;
 }
-.menu::after{
-    content: "";
-    width: 120px;
-    height: 50px;
-    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
+.menu::after {
+  content: "";
+  width: 120px;
+  height: 50px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.3)
+  );
 
-    display: block;
-    position: relative;
-    top: -150px;
-    left: -50px;
-   border-radius: 0 30px 0 0;
-   z-index: -1;
-}
-
-
-.circle2{
-    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
-    height: 20vh;
-    width: 20vw;
-    position: absolute;
-    border-radius: 50%;
-    border: 1px solid rgba(250, 255, 255, 0.1);   
-    top: -10%;
-    left: -10%;
+  display: block;
+  position: absolute;
+  top: -50px;
+  left: -50px;
+  border-radius: 0 30px 0 0;
+  z-index: -1;
 }
 
-.menu{
-    background-image: linear-gradient(to right, rgba(255,255,255,0.5), rgba(255,255,255,0.3));
-    width: 30%;
-    border-radius: 0 30px 30px 30px;
+.circle2 {
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.3)
+  );
+  height: 20vh;
+  width: 20vw;
+  position: absolute;
+  border-radius: 50%;
+  border: 1px solid rgba(250, 255, 255, 0.1);
+  top: -10%;
+  left: -10%;
 }
 
-.page{
-  
+.menu {
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.5),
+    rgba(255, 255, 255, 0.3)
+  );
+  width: 30%;
+  border-radius: 0 30px 30px 30px;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  flex-direction: column;
+}
+
+.avatar-container p {
+  text-align: center;
+  margin-top: 5px;
+}
+
+.avatar-img {
+  width: 120px;
+  height: 120px;
+  border-radius: 20px;
+}
+
+.sidebar-links {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 10px;
+}
+
+/*--------------------------------*/
+
+.container {
+  display: flex;
+  width: 100%;
+  padding: 4% 2%;
+  box-sizing: border-box;
+  height: 40vh;
+}
+
+.box {
+  flex: 1;
+  overflow: hidden;
+  transition: 0.5s;
+  margin: 0 2%;
+  box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+  line-height: 0;
+  border-radius: 20px;
+  color: rgb(190, 190, 190);
+}
+
+.box > img {
+  width: 200%;
+  height: calc(100% - 10vh);
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.box > span {
+  font-size: 3.8vh;
+  display: block;
+  text-align: center;
+  height: 10vh;
+  line-height: 2.6;
+}
+
+.box:hover {
+  flex: 1 1 50%;
+  cursor: pointer;
+}
+.box:hover > img {
+  width: 100%;
+  height: 100%;
+}
+
+.resume-btn {
+  background-color: white;
+}
+
+/*------------------------------------*/
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
+
+* {
+  box-sizing: border-box;
+}
+
+.blobs-container {
+  display: flex;
+}
+
+.resume-btn a {
+  color: rgb(71, 71, 71);
+  text-decoration: none;
+}
+
+.resume-btn :hover {
+  cursor: pointer;
+  color: black;
+}
+
+.blob {
+  border-radius: 10px;
+  background: black;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
+  margin-top: 20px;
+  transform: scale(1);
+  animation: pulse-black 2s infinite;
+  padding: 5px;
+}
+
+@keyframes pulse-black {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+.blob.white {
+  background: white;
+  box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+  animation: pulse-white 2s infinite;
+}
+
+@keyframes pulse-white {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
+.blob.red {
+  background: rgba(255, 82, 82, 1);
+  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
+  animation: pulse-red 2s infinite;
+}
+
+@keyframes pulse-red {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
+  }
+}
+
+.blob.orange {
+  background: rgba(255, 121, 63, 1);
+  box-shadow: 0 0 0 0 rgba(255, 121, 63, 1);
+  animation: pulse-orange 2s infinite;
+}
+
+@keyframes pulse-orange {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 121, 63, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
+  }
+}
+
+.blob.yellow {
+  background: rgba(255, 177, 66, 1);
+  box-shadow: 0 0 0 0 rgba(255, 177, 66, 1);
+  animation: pulse-yellow 2s infinite;
+}
+
+@keyframes pulse-yellow {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 177, 66, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(255, 177, 66, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(255, 177, 66, 0);
+  }
+}
+
+.blob.blue {
+  background: rgba(52, 172, 224, 1);
+  box-shadow: 0 0 0 0 rgba(52, 172, 224, 1);
+  animation: pulse-blue 2s infinite;
+}
+
+@keyframes pulse-blue {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
+  }
+}
+
+.blob.green {
+  background: rgba(51, 217, 178, 1);
+  box-shadow: 0 0 0 0 rgba(51, 217, 178, 1);
+  animation: pulse-green 2s infinite;
+}
+
+@keyframes pulse-green {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(51, 217, 178, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0);
+  }
+}
+
+.blob.purple {
+  background: rgba(142, 68, 173, 1);
+  box-shadow: 0 0 0 0 rgba(142, 68, 173, 1);
+  animation: pulse-purple 2s infinite;
+}
+
+@keyframes pulse-purple {
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(142, 68, 173, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(142, 68, 173, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(142, 68, 173, 0);
+  }
+}
+
+footer {
+  background-color: #222;
+  color: #fff;
+  font-size: 14px;
+  bottom: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 999;
+}
+
+footer p {
+  margin: 10px 0;
+}
+
+footer i {
+  color: red;
+}
+
+footer a {
+  color: #3c97bf;
+  text-decoration: none;
 }
