--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .main-container {
   background-image: url("./images/52f61nfzmwl51.jpg"); /*linear-gradient(to right top, #41B883, #7297bd);*/
   background-size: cover;
@@ -75,13 +80,17 @@
   left: -10%;
 }
 
+.page {
+  width: 75%;
+}
+
 .menu {
   background-image: linear-gradient(
     to right,
     rgba(255, 255, 255, 0.5),
     rgba(255, 255, 255, 0.3)
   );
-  width: 30%;
+  width: 25%;
   border-radius: 0 30px 30px 30px;
   display: flex;
   align-items: center;
@@ -93,7 +102,9 @@
   text-align: center;
   margin-top: 5px;
 }
-
+.avatar-container {
+  margin-top: 30px;
+}
 .avatar-img {
   width: 120px;
   height: 120px;
@@ -103,10 +114,12 @@
 .sidebar-links {
   text-align: center;
   font-size: 20px;
-  padding-top: 10px;
+  margin-top: 40px;
 }
 
-/*--------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
 
 .container {
   display: flex;
@@ -151,16 +164,9 @@
   height: 100%;
 }
 
-.resume-btn {
-  background-color: white;
-}
-
-/*------------------------------------*/
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");
-
-* {
-  box-sizing: border-box;
-}
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
 
 .blobs-container {
   display: flex;
@@ -173,39 +179,20 @@
 
 .resume-btn :hover {
   cursor: pointer;
-  color: black;
+  color: white;
+
+  /* Start the shake animation and make the animation last for 0.5 seconds */
+  animation: shake 0.5s !important;
+
+  /* When the animation is finished, start again */
+  animation-iteration-count: infinite !important;
 }
 
 .blob {
-  border-radius: 10px;
-  background: black;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  margin-top: 20px;
-  transform: scale(1);
-  animation: pulse-black 2s infinite;
-  padding: 5px;
-}
-
-@keyframes pulse-black {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-  }
+  border-radius: 5px;
 }
 
 .blob.white {
-  background: white;
-  box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
   animation: pulse-white 2s infinite;
 }
 
@@ -226,165 +213,253 @@
   }
 }
 
-.blob.red {
-  background: rgba(255, 82, 82, 1);
-  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
-  animation: pulse-red 2s infinite;
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+
+:root {
+  --color-bg: #e8ebf0;
+  --color-border: #1b4965;
+  --color-bg-nav: #fda531;
+  --color-bg-ham: #cae9ff;
+  --color-nav-icon: #1b4965;
+  --color-text: #1d3949;
+  --color-text-alt: #e76f51;
+  --color-bg-dummy: #cae9ff;
+  --color-primary: #5091b6;
+  --color-primary-light: #5fa8d3;
+  --color-secondary: #5091b6;
+  --color-secondary-light: #5fa8d3;
+  --duration: 0.5s;
 }
 
-@keyframes pulse-red {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
-  }
+.nav__checkbox {
+  display: none;
 }
 
-.blob.orange {
-  background: rgba(255, 121, 63, 1);
-  box-shadow: 0 0 0 0 rgba(255, 121, 63, 1);
-  animation: pulse-orange 2s infinite;
+.nav__button {
+  position: absolute;
+  top: 1.25rem;
+  left: 1.25rem;
+  height: 4.75rem;
+  width: 4.75rem;
+  border-radius: 50%;
+  text-align: center;
+  cursor: pointer;
+  background-color: var(--color-bg-ham);
+  z-index: 3000;
 }
 
-@keyframes pulse-orange {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 121, 63, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 121, 63, 0);
-  }
+.nav__button:hover {
+  box-shadow: 0 0.1rem 2rem rgba(18, 18, 18, 0.2);
 }
 
-.blob.yellow {
-  background: rgba(255, 177, 66, 1);
-  box-shadow: 0 0 0 0 rgba(255, 177, 66, 1);
-  animation: pulse-yellow 2s infinite;
+.nav__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@keyframes pulse-yellow {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 177, 66, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 177, 66, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 177, 66, 0);
-  }
+.nav__icon::before,
+.nav__icon::after {
+  content: "";
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  transition: all 0.2s;
 }
 
-.blob.blue {
-  background: rgba(52, 172, 224, 1);
-  box-shadow: 0 0 0 0 rgba(52, 172, 224, 1);
-  animation: pulse-blue 2s infinite;
+.nav__icon,
+.nav__icon::before,
+.nav__icon::after {
+  width: 1.75rem;
+  height: 0.4rem;
+  background-color: var(--color-nav-icon);
 }
 
-@keyframes pulse-blue {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(52, 172, 224, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(52, 172, 224, 0);
-  }
+.nav__icon:before {
+  transform: translateY(-150%) rotate(0deg) scale(1) skewX(15deg);
 }
 
-.blob.green {
-  background: rgba(51, 217, 178, 1);
-  box-shadow: 0 0 0 0 rgba(51, 217, 178, 1);
-  animation: pulse-green 2s infinite;
+.nav__icon:after {
+  transform: translateY(150%) rotate(0deg) scale(1) skewX(-15deg);
 }
 
-@keyframes pulse-green {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(51, 217, 178, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(51, 217, 178, 0);
-  }
+.nav__link:link,
+.nav__link:visited {
+  display: block;
+  font-size: 1.75rem;
+  font-weight: 600;
+  color: var(--color-text);
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 1rem 2rem;
+  position: relative;
+  transition: all 0.2s;
 }
 
-.blob.purple {
-  background: rgba(142, 68, 173, 1);
-  box-shadow: 0 0 0 0 rgba(142, 68, 173, 1);
-  animation: pulse-purple 2s infinite;
-}
-
-@keyframes pulse-purple {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(142, 68, 173, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(142, 68, 173, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(142, 68, 173, 0);
-  }
-}
-
-footer {
-  background-color: #222;
-  color: #fff;
-  font-size: 14px;
-  bottom: 0;
-  position: fixed;
+.nav__link::before {
+  content: "";
+  position: absolute;
+  top: 0;
   left: 0;
   right: 0;
-  text-align: center;
-  z-index: 999;
+  bottom: 0;
+  outline: 0px solid white;
+  z-index: -1;
+  transition: all 0.3s ease-in;
+}
+.nav__link:hover,
+.nav__link:active {
+  color: var(--color-text-alt);
+  transform: translateX(1rem);
+}
+.nav__link:hover::before,
+.nav__link:active::before {
+  outline-offset: -2.5rem;
+  outline-width: 2.5rem;
+}
+.nav__checkbox:checked ~ .nav__nav {
+  opacity: 1;
+  transform: translateX(0%);
 }
 
-footer p {
-  margin: 10px 0;
+.nav__checkbox:checked ~ .dummy-content {
+  transform: translateX(50%);
 }
 
-footer i {
-  color: red;
+.nav__checkbox:checked + .nav__button .nav__icon {
+  background-color: transparent;
 }
 
-footer a {
-  color: #3c97bf;
-  text-decoration: none;
+.nav__checkbox:checked + .nav__button .nav__icon::before {
+  transform: rotate(135deg);
+}
+
+.nav__checkbox:checked + .nav__button .nav__icon::after {
+  transform: rotate(-135deg);
+}
+
+.navbar-links li a {
+  margin: 10px;
+  display: block;
+  color: white;
+  text-shadow: 1px 1px 5px black;
+}
+
+.navbar-links-active {
+  cursor: pointer;
+  color: black;
+}
+
+.navbar-links li a:hover {
+  cursor: pointer;
+  text-shadow: 0 0 white !important;
+}
+
+.dummy-content {
+  width: 100%;
+  height: 90vh;
+  border-radius: 12px;
+  padding: 1rem 2.8rem;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-bg-dummy);
+  transition: transform var(--duration) cubic-bezier(0.8, 0, 0.2, 1);
+}
+
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+.contact {
+  display: none;
+}
+.about {
+  display: none;
+}
+.projects {
+  display: none;
+}
+.show-categories {
+  display: block;
+}
+
+.link-select {
+  text-shadow: 0 0 white !important;
+}
+
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+
+.menu-toggle-button {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .menu-toggle-button {
+    display: block;
+  }
+  .nav__nav {
+    position: absolute;
+    top: 8rem;
+    left: 2rem;
+    opacity: 0;
+    transform: translateX(-100%);
+    text-align: left;
+    transition: transform var(--duration) cubic-bezier(0.8, 0, 0.2, 1),
+      opacity var(--duration);
+    z-index: 100;
+  }
+  .menu::before {
+    content: "";
+    width: 0;
+    height: 0;
+  }
+  .menu::after {
+    content: "";
+    width: 0;
+    height: 0;
+  }
+  .main-section {
+    width: 90vw;
+    height: 90vh;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
 }
