--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@
   align-items: center;
   padding: 10px;
   flex-direction: column;
+  animation: pulse 0.5s ease-in-out;
 }
 
 .avatar-container p {
@@ -374,19 +375,35 @@
 /*------------------------------------*/ /*------------------------------------*/
 .contact {
   display: none;
+  animation: pulse 0.5s ease-in-out;
 }
 .about {
   display: none;
+  animation: pulse 0.5s ease-in-out;
+  margin: 20px;
 }
 .projects {
   display: none;
+  animation: pulse 0.5s ease-in-out;
 }
+
 .show-categories {
   display: block;
 }
 
 .link-select {
   text-shadow: 0 0 white !important;
+}
+@keyframes pulse {
+  0% {
+    opacity: 0;
+    transform: translateX(-10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: none;
+  }
 }
 
 /*------------------------------------*/ /*------------------------------------*/
