--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     rgba(255, 255, 255, 0.5),
     rgba(255, 255, 255, 0.3)
   );
+
   width: 70vw;
   height: 80vh;
   border-radius: 0 30px 30px 30px;
@@ -404,6 +405,39 @@
     opacity: 1;
     transform: none;
   }
+}
+
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+
+.abaut-container li {
+  margin-left: 40px;
+}
+.abaut-container p {
+  margin-top: 40px;
+}
+.abaut-container {
+  display: flex;
+  color: rgba(255, 255, 255, 0.801);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  font-size: 24px;
+  text-shadow: 1px 1px 5px black;
+  margin-top: 60px;
+}
+.abaut-container > :nth-child(2) {
+  position: relative;
+  top: 60px;
+}
+
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+/*------------------------------------*/ /*------------------------------------*/
+
+.contact a {
+  margin: 40px;
 }
 
 /*------------------------------------*/ /*------------------------------------*/
