--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -112,9 +112,10 @@
   margin-top: 30px;
 }
 .avatar-img {
-  width: 120px;
-  height: 120px;
-  border-radius: 20px;
+  width: 220px;
+    height: 220px;
+    border-radius: 20px;
+    margin-bottom: 10px;
 }
 
 .sidebar-links {
